--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://sites-mirantebackend.oehpg2.easypanel.host/
-VITE_SOCKET_URL=https://sites-mirantebackend.oehpg2.easypanel.host/
+VITE_API_URL=https://sites-mirantebackend.oehpg2.easypanel.host/api
+VITE_SOCKET_URL=https://sites-mirantebackend.oehpg2.easypanel.host/api
